add vssa